# ncaa_baseball

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ncaa_baseball_codex_prompt.md  pyproject.toml  teams_baseball.yaml  teams_baseball_d1_2023.yaml  teams_baseball_d1_2024.yaml  teams_baseball_d1_2025.yaml  teams_baseball_d1_full.yaml
docs/: ANDREW_MACK_SSME_CATALOG.md  AUDIT_COLLEGE_BASEBALL_PLAN.md  BETTING_MODEL_AUDIT.md  DATA_PLAN_2026.md  MODEL_BUILD_REFINEMENTS.md  MODEL_PURPOSE_AND_PATH.md  PROBABLE_STARTERS_PIPELINE.md  odds_api_regions_and_bookmakers.md
scripts/: 00_build_baseballr_crosswalk.R  01_scrape_pbp.R  02_scrape_rosters.R  03_scrape_player_stats.R  _bootstrap.py  audit_scoreboard_games.py  audit_scorecard.py  backtest.py  backtest_fast.py  backtest_model.py  backtest_posterior.py  backtest_vs_market.py  betmgm_scraper.py  betrivers_scraper.py  build_bullpen_fatigue.py  build_calibration_report.py  build_canonical_teams_2026.py  build_coverage_report.R  build_d1b_crosswalk.py  build_linescore_run_events.py  build_odds_name_crosswalk.py  build_park_factors.py  build_pitcher_registry.py  build_pitcher_table.py  build_pitching_from_espn.py  build_player_registry.py  build_run_event_indices.py  build_scoreboard_team_registry.py  build_starter_qa_report.py  build_team_batter_composition.py  build_team_game_stats.py  build_team_registry.py  build_team_table.py  build_todays_starters.py  build_weekend_rotations.py  bullpen_fatigue.py  check_odds_regions.py  compute_bullpen_quality.py  compute_game_context.py  (+76 more)
(+72 files in other folders)
